# photo-webhook

./: .gitignore  README.md  package-lock.json  package.json  pattern.py  pyproject.toml
.cursor/rules/: baml-rules.mdc
__test__/: test_hello.py
baml_client/: __init__.py  async_client.py  async_request.py  inlinedbaml.py  parser.py  partial_types.py  sync_client.py  sync_request.py  type_builder.py  types.py
baml_src/: conversion.baml
convex/: files.js  messages.js  schema.js
src/memento/: agent.py  hello.py  webhooks.py
src/memento/types/: types.py
src/memento/utils/: convex.py  logging.py
